@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.10
 
+	- Updated mirror sites in documentation (STR #2220)
 	- Setting a default font for Xft (STR #2216)
 	- Temporarily limited builds to 32-bit on OX S to stay
 	  compatible to Snow Leopard
